--- a/a_Portals/linktree/src_static/scss/utilities/_animations.scss
+++ b/a_Portals/linktree/src_static/scss/utilities/_animations.scss
@@ -18,18 +18,6 @@
     }
 }
 
-@keyframes travelAroundBorder {
-    0% { top: -2px; left: 50%; transform: translateX(-50%) rotate(0deg); }
-    12.5% { top: -2px; left: calc(100% - 50px); transform: translateX(0%) rotate(0deg); }
-    25% { top: 50%; left: calc(100% + 2px); transform: translateY(-50%) rotate(90deg); }
-    37.5% { top: calc(100% - 50px); left: calc(100% + 2px); transform: translateY(0%) rotate(90deg); }
-    50% { top: calc(100% + 2px); left: 50%; transform: translateX(-50%) rotate(180deg); }
-    62.5% { top: calc(100% + 2px); left: 50px; transform: translateX(0%) rotate(180deg); }
-    75% { top: 50%; left: -2px; transform: translateY(-50%) rotate(270deg); }
-    87.5% { top: 50px; left: -2px; transform: translateY(0%) rotate(270deg); }
-    100% { top: -2px; left: 50%; transform: translateX(-50%) rotate(360deg); }
-}
-
 @keyframes slideToUnlockShine {
     0% { background-position: 200% center; }
     100% { background-position: -200% center; }
